# tgfs

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: copilot-instructions.md
src/: config.rs  fuse.rs  index.rs  indexer.rs  main.rs  mtproxy.rs  server.rs  todo.md  zip_cache.rs
