[package]
name = "tgfs"
version = "0.1.0"
edition = "2024"

[dependencies]
grammers-client = "0.9"
grammers-mtsender = "0.9"
grammers-session = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rpassword = "7"
serde_yaml = "0.9"
axum = "0.7"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
async-compression = { version = "0.4", features = ["tokio", "deflate"] }
urlencoding = "2"
bytes = "1"
mime_guess = "2"
flate2 = "1.1"
