[package]
name = "tgfs"
version = "0.1.0"
edition = "2024"

[dependencies]
grammers-client = "0.9"
grammers-mtsender = { version = "0.9", features = ["proxy"] }
grammers-session = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
rpassword = "7"
serde_yaml = "0.9"
serde_json = "1.0"
axum = "0.7"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
async-compression = { version = "0.4", features = ["tokio", "deflate"] }
urlencoding = "2"
bytes = "1"
mime_guess = "2"
smallvec = "1"
fuser = "0.14"
flate2 = "1.0"
libc = "0.2"
